<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo_merak_jaya_abadi"
        android:src="@drawable/logo_mja_main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mja_judul"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mja_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_pt"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_reset"
        style="?android:attr/progressBarStyleSmallInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/isi_reset_password"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />

    <!-- Email -->

    <EditText
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:id="@+id/edtResetEmail"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:autofillHints="@string/masukan_email"
        android:background="@drawable/round_corner"
        android:drawableStart="@drawable/ic_mail"
        android:drawableEnd="@drawable/ic_arrow"
        android:drawablePadding="15dp"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="13sp"
        tools:ignore="LabelFor,UnusedAttribute" />


    <!-- Button Reset -->
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="5dp"
        android:background="@drawable/round_button"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/reset_password"
        android:textAllCaps="true"
        android:textColor="#FFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_back_login_from_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#0000"
        android:text="@string/kembali_ke_halaman_login"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

</LinearLayout>