<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AktivasiActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/logo_merak_jaya_abadi"
            android:src="@drawable/logo_mja_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mja_judul"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mja_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pt"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/progress_login"
            style="?android:attr/progressBarStyleSmallInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:visibility="gone" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <!-- Login -->
        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:layout_weight="1"
                    android:id="@+id/edtDeviceCode"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:autofillHints="@string/device_code"
                    android:background="@drawable/round_corner"
                    android:drawableStart="@drawable/ic_name"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:drawablePadding="15dp"
                    android:hint="@string/device_code"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="15sp"
                    tools:ignore="LabelFor,UnusedAttribute" />

                <Button
                    android:id="@+id/btn_help"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="monospace"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/help"
                    android:textAllCaps="true"
                    android:textColor="#FFF"
                    android:textSize="15sp"
                    android:textStyle="bold"/>


            </LinearLayout>
            <!-- Email Form -->
            <Button
                android:id="@+id/btn_device_aktif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:fontFamily="monospace"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/ambil_device_code"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <!-- PAssword Form -->
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/edtAktivasiDevice"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:autofillHints="Kode Aktivasi"
                    android:hint="@string/kode_aktivasi"
                    android:background="@drawable/round_corner"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableEnd="@drawable/ic_arrow"
                    android:drawablePadding="15dp"
                    android:inputType="text"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textSize="13sp"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/btn_Aktivasi_Device"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_gravity="right"
                    android:background="@drawable/round_button"
                    android:fontFamily="monospace"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/aktifkan_device"
                    android:textAllCaps="true"
                    android:textColor="#FFF"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>