<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/logo_merak_jaya_abadi"
            android:src="@drawable/logo_mja_main" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mja_judul"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mja_content"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pt"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"

            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_login"
            style="?android:attr/progressBarStyleSmallInverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <!-- Login -->
        <LinearLayout
            android:id="@+id/email_password_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            tools:ignore="UselessParent">

            <!-- Email Form -->

            <EditText
                android:layout_marginVertical="5dp"
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:autofillHints="Masukkan Username"
                android:background="@drawable/round_corner"
                android:drawableStart="@drawable/ic_name"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="13sp"
                tools:ignore="LabelFor,UnusedAttribute" />


            <!-- PAssword Form -->

            <EditText
                android:layout_marginVertical="5dp"
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:autofillHints="Masukan Password"
                android:background="@drawable/round_corner"
                android:drawableStart="@drawable/ic_lock"
                android:drawableEnd="@drawable/ic_arrow"
                android:drawablePadding="15dp"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="13sp"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:id="@+id/email_password_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Button Masuk -->
                <Button
                    android:id="@+id/btn_email_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/round_button"
                    android:fontFamily="monospace"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/masuk"
                    android:textAllCaps="true"
                    android:textColor="#FFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="monospace"
                    android:text="@string/atau"
                    android:textColor="@color/colorAccent" />

                <!-- Daftar  -->
                <Button
                    android:id="@+id/btn_to_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_button"
                    android:fontFamily="monospace"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/daftar"
                    android:textAllCaps="true"
                    android:textColor="#FFF"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#0000"
                    android:text="@string/lupa_password"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>